--- a/tensorflow MNIST 1 layer full.ipynb
+++ b/tensorflow MNIST 1 layer full.ipynb
@@ -491,13 +491,7 @@
       "\n",
       "******* Middle layer size: 36 **************\n",
       "\n",
-      "125/125 [==============================] - 0s 1ms/step - loss: 1.3713e-06 - accuracy: 1.0000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "125/125 [==============================] - 0s 1ms/step - loss: 1.3713e-06 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 1ms/step - loss: 0.8345 - accuracy: 0.9130\n",
       "\n",
       "******* Middle layer size: 37 **************\n",
@@ -865,13 +859,7 @@
       "\n",
       "******* Middle layer size: 8 **************\n",
       "\n",
-      "125/125 [==============================] - 0s 1ms/step - loss: 7.8992e-05 - accuracy: 1.0000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "125/125 [==============================] - 0s 1ms/step - loss: 7.8992e-05 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 1ms/step - loss: 1.5506 - accuracy: 0.8760\n",
       "\n",
       "******* Middle layer size: 9 **************\n",
@@ -1238,13 +1226,7 @@
       "\n",
       "******* Middle layer size: 30 **************\n",
       "\n",
-      "125/125 [==============================] - 0s 2ms/step - loss: 1.6772e-06 - accuracy: 1.0000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "125/125 [==============================] - 0s 2ms/step - loss: 1.6772e-06 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 2ms/step - loss: 0.6912 - accuracy: 0.9320\n",
       "\n",
       "******* Middle layer size: 31 **************\n",
@@ -1611,13 +1593,7 @@
       "32/32 [==============================] - 0s 1ms/step - loss: 1.7834 - accuracy: 0.2760\n",
       "\n",
       "******* Middle layer size: 2 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 0s 1ms/step - loss: 0.9780 - accuracy: 0.6008\n",
       "32/32 [==============================] - 0s 1ms/step - loss: 1.6962 - accuracy: 0.4700\n",
       "\n",
@@ -1984,13 +1960,7 @@
       "32/32 [==============================] - 0s 2ms/step - loss: 0.8354 - accuracy: 0.9230\n",
       "\n",
       "******* Middle layer size: 24 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 0s 2ms/step - loss: 2.6606e-06 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 2ms/step - loss: 1.1598 - accuracy: 0.9080\n",
       "\n",
@@ -2357,13 +2327,7 @@
       "32/32 [==============================] - 0s 2ms/step - loss: 0.5546 - accuracy: 0.9360\n",
       "\n",
       "******* Middle layer size: 46 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 0s 2ms/step - loss: 9.5856e-07 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 2ms/step - loss: 0.6301 - accuracy: 0.9270\n",
       "\n",
@@ -2731,13 +2695,7 @@
       "32/32 [==============================] - 0s 1ms/step - loss: 0.8927 - accuracy: 0.9120\n",
       "\n",
       "******* Middle layer size: 18 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 0s 2ms/step - loss: 3.5079e-06 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 2ms/step - loss: 0.9030 - accuracy: 0.9050\n",
       "\n",
@@ -3354,13 +3312,7 @@
       "32/32 [==============================] - 0s 3ms/step - loss: 1.7546 - accuracy: 0.8010\n",
       "\n",
       "******* Middle layer size: 37 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 0s 3ms/step - loss: 2.9410e-05 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 2ms/step - loss: 1.5911 - accuracy: 0.8270\n",
       "\n",
@@ -3728,13 +3680,7 @@
       "32/32 [==============================] - 0s 3ms/step - loss: 1.6336 - accuracy: 0.8110\n",
       "\n",
       "******* Middle layer size: 29 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 0s 3ms/step - loss: 6.3694e-05 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 3ms/step - loss: 1.6152 - accuracy: 0.8040\n",
       "\n",
@@ -4102,13 +4048,7 @@
       "32/32 [==============================] - 0s 2ms/step - loss: 2.1809 - accuracy: 0.7880\n",
       "\n",
       "******* Middle layer size: 21 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 0s 2ms/step - loss: 4.9307e-04 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 2ms/step - loss: 2.1422 - accuracy: 0.7900\n",
       "\n",
@@ -4476,13 +4416,7 @@
       "32/32 [==============================] - 0s 2ms/step - loss: 1.8660 - accuracy: 0.7540\n",
       "\n",
       "******* Middle layer size: 13 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 0s 3ms/step - loss: 0.0092 - accuracy: 0.9992\n",
       "32/32 [==============================] - 0s 2ms/step - loss: 2.2236 - accuracy: 0.7630\n",
       "\n",
@@ -4850,13 +4784,7 @@
       "32/32 [==============================] - 0s 3ms/step - loss: 1.0079 - accuracy: 0.7280\n",
       "\n",
       "******* Middle layer size: 5 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 0s 3ms/step - loss: 0.6455 - accuracy: 0.8338\n",
       "32/32 [==============================] - 0s 3ms/step - loss: 0.9693 - accuracy: 0.7330\n",
       "\n",
@@ -5529,13 +5457,7 @@
       "32/32 [==============================] - 0s 6ms/step - loss: 1.6560 - accuracy: 0.8050\n",
       "\n",
       "******* Middle layer size: 37 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 1s 5ms/step - loss: 2.4486e-05 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 5ms/step - loss: 1.6644 - accuracy: 0.8140\n",
       "\n",
@@ -5902,13 +5824,7 @@
       "32/32 [==============================] - 0s 3ms/step - loss: 1.3145 - accuracy: 0.7550\n",
       "\n",
       "******* Middle layer size: 9 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 1s 4ms/step - loss: 0.0581 - accuracy: 0.9915\n",
       "32/32 [==============================] - 0s 4ms/step - loss: 1.9832 - accuracy: 0.7360\n",
       "\n",
@@ -6274,13 +6190,7 @@
       "32/32 [==============================] - 0s 8ms/step - loss: 1.1125 - accuracy: 0.8690\n",
       "\n",
       "******* Middle layer size: 81 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 1s 8ms/step - loss: 4.5291e-06 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 8ms/step - loss: 1.0220 - accuracy: 0.8690\n",
       "\n",
@@ -6647,13 +6557,7 @@
       "32/32 [==============================] - 0s 8ms/step - loss: 1.3042 - accuracy: 0.8410\n",
       "\n",
       "******* Middle layer size: 53 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 1s 9ms/step - loss: 1.2567e-05 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 9ms/step - loss: 1.4458 - accuracy: 0.8260\n",
       "\n",
@@ -7020,13 +6924,7 @@
       "32/32 [==============================] - 0s 5ms/step - loss: 1.9764 - accuracy: 0.8280\n",
       "\n",
       "******* Middle layer size: 25 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 1s 6ms/step - loss: 1.2458e-04 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 6ms/step - loss: 1.8416 - accuracy: 0.8100\n",
       "\n",
@@ -7579,13 +7477,7 @@
       "32/32 [==============================] - 0s 8ms/step - loss: 1.6321 - accuracy: 0.8340\n",
       "\n",
       "******* Middle layer size: 33 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 1s 7ms/step - loss: 5.5993e-05 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 7ms/step - loss: 1.9842 - accuracy: 0.8010\n",
       "\n",
@@ -7948,13 +7840,7 @@
       "\n",
       "******* Middle layer size: 4 **************\n",
       "\n",
-      "125/125 [==============================] - 1s 6ms/step - loss: 0.6355 - accuracy: 0.8435\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "125/125 [==============================] - 1s 6ms/step - loss: 0.6355 - accuracy: 0.8435\n",
       "32/32 [==============================] - 0s 5ms/step - loss: 0.9279 - accuracy: 0.7460\n",
       "\n",
       "******* Middle layer size: 5 **************\n",
@@ -8319,13 +8205,7 @@
       "32/32 [==============================] - 0s 11ms/step - loss: 1.3749 - accuracy: 0.8550\n",
       "\n",
       "******* Middle layer size: 76 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 2s 14ms/step - loss: 5.9704e-06 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 14ms/step - loss: 1.1896 - accuracy: 0.8690\n",
       "\n",
@@ -8692,13 +8572,7 @@
       "32/32 [==============================] - 0s 13ms/step - loss: 1.4427 - accuracy: 0.8470\n",
       "\n",
       "******* Middle layer size: 48 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 2s 14ms/step - loss: 1.7876e-05 - accuracy: 1.0000\n",
       "32/32 [==============================] - 0s 13ms/step - loss: 1.2935 - accuracy: 0.8480\n",
       "\n",
@@ -9992,13 +9866,7 @@
       "\n",
       "******* Middle layer size: 99 **************\n",
       "\n",
-      "125/125 [==============================] - 2s 18ms/step - loss: 3.5799e-06 - accuracy: 1.0000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "125/125 [==============================] - 2s 18ms/step - loss: 3.5799e-06 - accuracy: 1.0000\n",
       "32/32 [==============================] - 1s 18ms/step - loss: 1.3576 - accuracy: 0.8410\n",
       "\n",
       "******* Middle layer size: 100 **************\n",
@@ -10364,13 +10232,7 @@
       "32/32 [==============================] - 1s 18ms/step - loss: 1.2714 - accuracy: 0.8460\n",
       "\n",
       "******* Middle layer size: 71 **************\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "125/125 [==============================] - 3s 20ms/step - loss: 5.2271e-06 - accuracy: 1.0000\n",
       "32/32 [==============================] - 1s 20ms/step - loss: 1.2068 - accuracy: 0.8640\n",
       "\n",
@@ -10614,7 +10476,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -10628,7 +10490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.5"
   },
   "vscode": {
    "interpreter": {
